--- a/vinhul-backend/package.json
+++ b/vinhul-backend/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
